refactor(workflows/skills, stacks): SKILL 정본화 + 페르소나 인용 대상 § 신설·승격
페르소나에서 위임한 정의들을 SKILL 측 정본으로 정착:

- adversarial-review-bridge § Error signature (신설): SHA-1 8-char prefix 계산 공식·예시·사용처
- adversarial-review-bridge § Findings classification (신설): BLOCKING/SHOULD/NIT/OUT-OF-SCOPE 4-bucket 정의
- adversarial-review-bridge § Rescue dispatch pipeline (rename + 본문 재작성): 0~5단계 (De-dup → 알림 파싱 → 추적 파일 → codex 호출 → RV 발행 → 결과 처리). Technoking 고유 책임은 제외
- orchestration-guide § Worker escalation invariants (### → ## 승격): 4 트리거 (error_2x / timeout / attempt_limit / context_pressure) 수치 표 정착, 페르소나 흩어진 수치 일원화
- ticket-protocol § Rescue validation cycle (신설): RV-NNNN sub-case 4b 워커 검증 절차 + "코드 수정 금지 / 재시도 없음" 불변 규칙

부가 정리:
- ticket-protocol schema 4b 의 필드명 `branch` → `rescue_branch` 통일 (페르소나·새 § 와 일치)
- kotlin-spring-boot-core 의 Architecture/Domain/DTO/Cross-cutting 예시 보수적 압축 (-17줄)
- testing-kotlin 의 gradlew 명령 명세 보강 (compileKotlin 추가, 슈퍼셋·iteration 가이드 부연)

SKILL 측 총 +63줄 / +2.6KB (정본 강화로 일부 증가).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>